--- a/V1/css/index.css
+++ b/V1/css/index.css
@@ -203,11 +203,11 @@
 .game_team_e{
     margin-bottom: 18px;
 }
-.game_team_list_detial{
+.game_team_list_detail{
     display: flex;
     flex-wrap: wrap;
 }
-.game_team_list_detial li{
+.game_team_list_detail li{
     width: 128px;
     height: 182px;
     display: flex;
@@ -219,20 +219,20 @@
     margin-bottom: 10px;
     padding: 2px;
 }
-.game_team_list_detial li:nth-child(7n){
+.game_team_list_detail li:nth-child(7n){
     margin-right: 0;
 }
-.game_team_list_detial li .a1{
+.game_team_list_detail li .a1{
     padding:14px 12px 0 12px;
 }
-.game_team_list_detial li a{
+.game_team_list_detail li a{
     /* display: flex;
     flex-direction: column; */
     border-radius: 8px;
     width: 100%;
     /* justify-content: space-between; */
 }
-.game_team_list_detial li span{
+.game_team_list_detail li span{
     width: 100%;
     height: 48px;
     /* line-height: 48px; */
@@ -242,19 +242,19 @@
     color:#333;
     /* transition: all 0.2s linear; */
 } 
-.game_team_list_detial li:hover span{
+.game_team_list_detail li:hover span{
     background: linear-gradient(90deg, #FAC569, #FF6551);
     color: #fff;
     line-height: 48px;
 }
 
-.game_team_list_detial li:hover{
+.game_team_list_detail li:hover{
     box-sizing: border-box;
     background: linear-gradient(90deg, #FAC569, #FF6551);
     transform: translateY(0px);
 
 }
-.game_team_list_detial li:hover a{
+.game_team_list_detail li:hover a{
     border-radius: 8px;
     background: #FFFFFF;
     margin: 0 auto; 
@@ -358,18 +358,18 @@
 .hot_player_list li:hover a{
     text-decoration: none;
 }
-.hot_player_detial{
+.hot_player_detail{
     padding-top: 30px;
 }
-.hot_player_detial_div{
+.hot_player_detail_div{
     display: none;
 }
-.hot_player_detial_div li{
+.hot_player_detail_div li{
     width: 12.5%;
     float: left;
     transition: all 0.2s linear;
 }
-.hot_player_detial_div li a{
+.hot_player_detail_div li a{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -377,7 +377,7 @@
     height: 172px;
     margin: 0 auto;
 }
-.hot_player_detial_div .hot_player_img{
+.hot_player_detail_div .hot_player_img{
     width: 100px;
     height: 100px;
     margin-bottom: 14px;
@@ -386,7 +386,7 @@
     overflow: hidden;
     position: relative;
 }
-.hot_player_detial_div li img{
+.hot_player_detail_div li img{
     max-width: 100%;
     position: absolute;
     left: 0;
@@ -395,17 +395,17 @@
     right: 0;
     margin: auto;
 }
-.hot_player_detial_div a span{
+.hot_player_detail_div a span{
     font-size: 18px;
     color: #333;
     text-align: center;
     height: 18px;
     line-height: 18px;
 }
-.hot_player_detial_div li:hover{
+.hot_player_detail_div li:hover{
     transform: translateY(0px);
 }
-.hot_player_detial_div li:hover .hot_player_img{
+.hot_player_detail_div li:hover .hot_player_img{
     width: 124px;
     height: 126px;
     background-image: url("../images/game_tab2.png");
@@ -414,14 +414,14 @@
     border: none;
     margin-bottom: 0;
 }
-.hot_player_detial_div li:hover a{
+.hot_player_detail_div li:hover a{
     width: 85%;
     background: #fff;
     box-shadow: 0px 16px 40px 0px rgba(51, 51, 51, 0.14);
     border-radius: 4px;
     border-bottom: 6px solid #FA8169;
 }
-.hot_player_detial_div.active{
+.hot_player_detail_div.active{
     display: block;
 }
 /* 资讯 */
@@ -555,10 +555,10 @@ margin-bottom: 14px;
     font-size: 20px;
     color: #666;
 }
-.news_dianjing_detial{
+.news_dianjing_detail{
     display: none;
 }
-.news_dianjing_detial.active{
+.news_dianjing_detail.active{
     display: block;
 }
 /* 赛事专题 */
@@ -639,11 +639,11 @@ margin-bottom: 14px;
         left: -34%;
         height: 3.4rem;
     }
-    .game_team_list_detial li{
+    .game_team_list_detail li{
         width: 33%;
         margin: 0;
     }
-    .game_team_list_detial li a{
+    .game_team_list_detail li a{
         justify-content: center;
         align-items: center;
         display: flex;
@@ -653,7 +653,7 @@ margin-bottom: 14px;
         height: auto;
         padding-bottom: 20px;
     }
-    .hot_player_detial_div li{
+    .hot_player_detail_div li{
         width: 25%;
     }
     .news_dianjing_news{
@@ -689,7 +689,7 @@ margin-bottom: 14px;
     .news_dianjing_news li:nth-child(7){
         border-bottom: none;
     }
-    .hot_player_detial_div a span{
+    .hot_player_detail_div a span{
         font-size: .22rem;
     }
     .news_dianjing_mid_img{
