--- a/V1/css/game.css
+++ b/V1/css/game.css
@@ -6,3 +6,96 @@
     width: 320px;
     float: right;
 }
+.game_title{
+    width: 860px;
+    height: 336px;
+    background: #fff;
+    border: 1px solid #EEEEEE;
+    border-radius: 8px;
+}
+.header{
+    box-shadow: -5px 6px 30px 0px rgba(51, 51, 51, 0.08);
+    margin-bottom: 30px;
+}
+.wrapper{
+    background: #F5F6F7;
+}
+.game_right{
+    font-family: 'shuzi';
+}
+.game_title{
+    padding: 0 20px;
+}
+.game_team1_img{
+    width: 144px;
+    height: 216px;
+    background: url("../images/game_team1.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+}
+.game_team1 span{
+    font-size: 24px;
+    color: #333;
+    display: block;
+    text-align: center;
+
+}
+.game_vs{
+    display: flex;
+}
+.game_vs span{
+    font-family: shuzi;
+    width: 64px;
+    height: 42px;
+    border-radius: 8px;
+    text-align: center;
+    line-height: 42px;
+
+}
+.game_type{
+    min-width: 250px
+}
+.game_vs .span1{
+    background: #FF5C6A;
+}
+.game_vs .span2{
+    background: #0C8DFC;
+}
+.game_title_top{
+    justify-content: space-around;
+    display: flex;
+}
+.game_type{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.game_type .span1{
+    font-size: 20px;
+    color: #333;
+}
+.game_type .span2{
+    font-size: 30px;
+    color: #333;
+}
+.game_type p{
+    font-size: 20px;
+    color: #999;
+}
+.game_team_depiction{
+    display: flex;
+    justify-content: space-between;
+}
+.game_team_depiction p{
+    width: 300px;
+    height: 48px;
+    line-height: 24px;
+    font-size: 18px;
+    color: #666;
+    display: -webkit-box; 
+    word-break: break-all;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp:2;
+    overflow: hidden;
+    text-overflow:ellipsis;
+}
