--- a/V1/css/game.css
+++ b/V1/css/game.css
@@ -69,6 +69,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 30px;
 }
 .game_type .span1{
     font-size: 20px;
