--- a/V1/css/index.css
+++ b/V1/css/index.css
@@ -133,6 +133,11 @@
       width: 54px;
       height: 54px;
   }
+  .game_match_img img{
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+  }
   .game_match_top span{
       font-size: 16px;
       color: #999;
@@ -403,6 +408,9 @@
     bottom: 0;
     right: 0;
     margin: auto;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 .hot_player_detail_div a span{
     font-size: 18px;
