--- a/V1/css/index.css
+++ b/V1/css/index.css
@@ -144,7 +144,7 @@
       word-wrap: break-word;
     word-break: normal;
     max-width: 45%;
-    
+    /*  */
   }
   .game_match_bottom .left{
       display: flex;
