--- a/V1/css/headerfooter.css
+++ b/V1/css/headerfooter.css
@@ -45,7 +45,7 @@ content: " ";
 clear: both;
 position: absolute;
 bottom: -8px;
-background: #FA8E69;
+background: #ff6649;
 left: 0;
 right: 0;
 margin: 0 auto;
