--- a/V1/css/game.css
+++ b/V1/css/game.css
@@ -171,6 +171,7 @@
     /* width: 444px; */
     justify-content: center;
     margin: 0 auto 10px;
+    flex-wrap: wrap;
 
 }
 .game_detail_ul li{
@@ -178,6 +179,8 @@
     width: 140px;
     height: 38px;
     margin: 0 12px;
+    float: left;
+    margin-bottom: 10px;
 }
 .game_detail_ul li a{
     display: flex;
@@ -595,6 +598,9 @@
     background: #FFF9F7;
     color: #FA8E69;
 }
+.vs_data1 li.active a{
+    color: #FF6649;
+}
 .vs_data1 li:nth-last-child(1){
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -992,6 +998,7 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
     border: 1px solid #eee;
     border-radius: 8px;
     padding: 18px 18px 0;
+    margin-bottom: 20px;
 }
 .game_lately .title {
     font-size: 0;
@@ -1022,6 +1029,12 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pr
     transition: all 0.2s linear;
     border-bottom: 1px solid #eee;
     height: 149px;
+}
+.game_right .game_match_ul li:nth-child(3){
+    border-bottom: 0;
+}
+.game_right .game_match_ul:hover li{
+    border-bottom: 0;
 }
 .game_right .game_match_ul .left span{
     font-size: 16px;
