--- a/V1/css/progress-bars.css
+++ b/V1/css/progress-bars.css
@@ -1,4 +1,14 @@
-
+@keyframes myfirst
+{
+    from {width:0}
+    to {width: auto;}
+}
+ 
+@-webkit-keyframes myfirst /* Safari 与 Chrome */
+{
+  from {width:0}
+  to {width: auto;}
+}
 .progress1 {
   height: 6px;
   /* background: #ebebeb; */
@@ -12,14 +22,15 @@
   position: relative;
   float: left;
   margin: 0 -1px;
-  min-width: 30px;
+  /* min-width: 30px; */
   height: 6px;
   line-height: 6px;
   text-align: right;
   background: #cccccc;
   border-color: #bfbfbf #b3b3b3 #9e9e9e;
   border-radius: 10px;
-  transition: width 0.5s;
+  animation: myfirst .5s;
+  -webkit-animation: myfirst .5s; /* Safari 与 Chrome */
 }
 .progress1 > span > span {
   /* padding: 0 8px; */
