--- a/V1/css/progress-bars.css
+++ b/V1/css/progress-bars.css
@@ -29,8 +29,8 @@
   background: #cccccc;
   border-color: #bfbfbf #b3b3b3 #9e9e9e;
   border-radius: 10px;
-  animation: myfirst 1s;
-  -webkit-animation: myfirst 1s; /* Safari 与 Chrome */
+  animation: myfirst 0.1s;
+  -webkit-animation: myfirst 0.1s; /* Safari 与 Chrome */
 }
 .progress1 > span > span {
   /* padding: 0 8px; */
@@ -70,13 +70,15 @@
   position: relative;
   float: left;
   margin: 0 -1px;
-  min-width: 30px;
+  /* min-width: 30px; */
   height: 6px;
   line-height: 6px;
   text-align: right;
   background: #cccccc;
   border-color: #bfbfbf #b3b3b3 #9e9e9e;
   border-radius: 10px;
+  animation: myfirst 0.3s;
+  -webkit-animation: myfirst 0.3s;
 }
 .progress2 > span > span {
   /* padding: 0 8px; */
